--- a/application.properties
+++ b/application.properties
@@ -1,2 +1,8 @@
+spring.datasource.password=Muustang97
+spring.datasource.username=postgres
+eureka.instance.prefer-ip-address=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.data.jdbc.dialect=postgresql
 
-www=eee
+
